# slack-wlan-status-updater

./: README.md  pyproject.toml
slack_wlan_status_updater/: __main__.py  status_selector.py  status_setter.py
