[tool.poetry]
name = "slack-wlan-status-updater"
version = "0.1.1"
description = "Update Slack status based on WLAN network"
authors = ["Martin Ueding <mu@martin-ueding.de>"]
license = "MIT"

[tool.poetry.scripts]
slack-wlan-status-updater = "slack_wlan_status_updater.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
